Fix get in touch button contrast ratio

--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ h2.lets-connect {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #5263FF;
   background-color: #fff;
   padding: 15px;
   border-radius: 8px;
